2005-10-19  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Update description of xticlabels(<col>).

2005-10-19  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/x11.trm (START_HELP): Update docs about window title.

2005-10-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.h: Export (BoundingBox *)clip_area, so that gnuplot
	core routines can specify clipping boundaries before calling
	clip_point() and clip_line().

	* src/term.c (do_arrow): clip all lines in arrow to the canvas.
	Bug #1187336.

	* src/graph3d.c (get_arrow3d): Since arrow clipping is now
	handled properly in do_arrow(), remove the old cruder clipping test.

	* term/pdf.trm (PDF_filled_polygon): Filled arrowheads can still
	protrude across the canvas boundary, and the pdflib routines 
	cannot deal with this due to the use of (unsigned int) for the
	polygon vertices.  Cast to (int) prevents segfaults or error
	exit by pdflib library.

	* term/pdf.trm (PDF_point): Bugfix: Do not crash on pointsize 0.

2005-10-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.h src/gadgets.c: Define a BoundingBox structure type,
	and create two instances: one for the plot boundary and one for the
	canvas boundary.  Also export a (BoundingBox *)clip_area  pointer to
	the currently active BoundingBox for clipping.  At this point,
	clip_area always points to plot_bounds.

	* src/term.c (term_start_plot): Immediately after each call to
	term->graphics(), load terminal's coordinate range into canvas
	BoundingBox.

	* src/gadgets.c (clip_point clip_line): Clip against the BoundingBox
	pointed to by clip_area. In the past this has always been the plot
	boundary, but now we will be able to use the same routines to clip
	against other areas.

	* src/graphics.c src/graph3d.c src/mouse.c: Replace all instances of
	xright, xleft, ytop, ybot with references to those same fields in the
	plot_bounds BoundingBox.

	* term/tkcanvas.trm: Replace xright, xleft, ytop, ybut here to.